order detail and shopping cart get by id in api refactor
